# bookmarked

./: .gitignore  README.md  dox.md
backend/: ClassTesting.py  README.md  api.py  pyproject.toml
backend/controllers/: ActivityManager.py  RatingController.py  TestController.py
backend/entities/: Accounts.py  Books.py  Social.py  TestEntity.py
backend/testing/: README.md  entityTesting.py
bookmarked-frontend/: README.md  package-lock.json  package.json
bookmarked-frontend/src/: App.jsx  index.css
bookmarked-frontend/src/components/: NavBar.jsx
frontend/: README.md  index.html  package-lock.json  package.json
frontend/src/: App.jsx  exampleBooks.json  index.css
frontend/src/components/: BookCoverCard.jsx  NavBar.jsx
frontend/src/pages/: BookPage.jsx  BookshelfPage.jsx  CommunityPage.jsx  HomePage.jsx  RegisterPopup.jsx  RegistrationForm.jsx  SearchResultsPage.jsx
